fix: fix minor issues with dark mode

--- a/shared/styles/application.scss
+++ b/shared/styles/application.scss
@@ -42,11 +42,11 @@ body {
 }
 
 body {
-    background-color: #f0f0f0;
+    background-color: #525252;
 }
 
 body.dark {
-    background-color: #404040;
+    background-color: #525252;
 }
 
 * {
